# touchpad-zones

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  touchpad-zones.service
src/touchpad_zones/: __init__.py  main.py
